	state was not cleared correctly.
2016-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Mpeg1Decoder' class in 'src/common/mpeg1decoder.cpp' and
	'src/common/mpeg1decoder.h'.
	* Added MPEG-1 support in 'src/common/streamplayer_alsa.cpp' and
	'src/common/streamplayer_alsa.h'.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/common/streamplayer_alsa.cpp' and
	'src/common/streamplayer_alsa.h' that broke the build under
	MingW32.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'StreamPlayerMme' class.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/streamplayer_mme.cpp' that caused noise
	at the start of play-outs.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/streamplayer_mme.cpp' that broke
	the build under Linux.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'StreamPlayerGlass' class in
	 'src/common/streamplayer_glass.cpp' and
	 'src/common/streamplayer_glass.h'.
	* Removed superfluous configuratin directives from
	rivendell-browser.conf(5).
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out support for registry-based configuration storage
	in 'src/common/config.cpp'.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Added default parameter values for registry-based configuration
	storage in 'src/common/config.cpp'.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Added icons.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'link_common.sh' that broke the build on MingW32.
2016-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/common/streamplayer.cpp' to use the server hostname
	value from the configuration.
2016-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/common/streamplayer_mme.cpp' to use the audio
	device value from the configuration.
2016-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'rdadminb.exe' to the 'make install-win32' target.