@@ -84,3 +84,6 @@
 	device value from the configuration.
 2016-12-28 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'rdadminb.exe' to the 'make install-win32' target.
+2017-01-06 Fred Gleason <fredg@paravelsystems.com>
+	* Moved 'src/rdlibraryb/librarymodel.cpp' and
+	'src/rdlibraryb/librarymodel.h' to 'src/common/'.
